2005-06-14  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-gradients.c: renamed internal keys.

2005-06-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: some dialog changes, hopefully to
	the better.

2005-06-13  Michael Natterer  <mitch@gimp.org>

	* app/core/gimplayer.c (gimp_layer_transform_color): copy the
	alpha channel from the correct source.

2005-06-13  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-resize.c: added missing brackets in macros.

2005-06-11  Manish Singh  <yosh@gimp.org>

	* configure.in: if any of the pygimp dependencies aren't fulfilled,
	display a more informative message.

	* autogen.sh: depend on automake 1.8, so AM_PATH_PYTHON has a user
	defined failure mode. Also prefer automake 1.9.

2005-06-11  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.c: connect to "selection-changed"
	instead of "file-activated". Fixes bug #307146.

2005-06-11  Michael Natterer  <mitch@gimp.org>

	Allow to use the selected font in the text editor (bug #170299):

	* app/widgets/gimptexteditor.[ch]: added a "Use selected font"
	toggle and an API to set/get the selected font name.

	* app/tools/gimptextoptions.c: update the editor's font when the
	text option's font changes. Renamed text editor callbacks to
	gimp_text_options_editor_foo().

2005-06-10  Michael Natterer  <mitch@gimp.org>

	* configure.in: don't try to generate tips/Makefile.

2005-06-10  Sven Neumann  <sven@gimp.org>

	Switch to a more standard way of treating the translations for the
	startup tips (bug #171846):

	* Makefile.am
	* configure.in: removed tips directory; added data/tips and po-tips
	directories instead.

	* data/Makefile.am
	* data/AUTHORS
	* data/ChangeLog
	* data/README: removed these three outdated files.

	* data/tips: gimp.tips.xml and related files live here now.

	* po-tips: translations of the tips are found here now.

	* README.i18n: changed accordingly.

2005-06-10  Michael Natterer  <mitch@gimp.org>
